Add function calling + PdfContent in UserMessage